Correccion inflector ActividadSeccion

--- a/app/views/actividades/calendario.html.erb
+++ b/app/views/actividades/calendario.html.erb
@@ -74,6 +74,7 @@
       <% end %>  
       
       <% actividad = Actividad.por_fecha_inicio(fecha) %>
+      <% actividad = Actividad.por_seccion(1) %>
       <% if actividad.count > 0 %>
         <% if actividad.count == 1 %>
           <% url = "/actividades/#{actividad.first.id}" %>
