--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -15,13 +15,13 @@
   <div class="field">
     <%= f.hidden_field :colegio_id, :value => "1" %>
   </div>
+ <div class="field">
+    <%= f.label :nombre %><br />
+    <%= f.text_field :nombre %>
+  </div>
   <div class="field">
     <%= f.label :usuario %><br />
     <%= f.text_field :usuario %>
-  </div>
-  <div class="field">
-    <%= f.label :nombre %><br />
-    <%= f.text_field :nombre %>
   </div>
   <div class="field">
     <%= f.label :clave %><br />
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :perfil_id %><br />
-    <%= collection_select(:usuario, :perfil_id, Perfil.all, :id, :descripcion, { :prompt => ':: Seleccione un perfil ::'}, {"data-mini" => "true"}) %>
+    <%= collection_select(:usuario, :perfil_id, Perfil.all, :id, :descripcion, { :prompt => ':: Seleccione ::'}, {"data-mini" => "true"}) %>
   </div>
   <div class="field">
     <%= f.label :persona_vinculada_id %><br />
