--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -11,13 +11,13 @@
         <li><a href="<%= cuaderno_controles_revisiones_path %>">Verificar</a></li>
         <li data-role="list-divider">Seguridad de alumnos</li>
         <li><a href="<%= personas_vinculadas_path %>">Personas vinculadas</a></li>
-        <li><a href="<%=  alumnos_secciones_path %>">Vincular personas</a></li>
-        <li><a href="<%= salida_path  %> ">Salida de alumnos</a></li>
+        <li><a href="<%= alumnos_secciones_path %>">Vincular personas</a></li>
+        <li><a href="<%= salida_path %>">Salida de alumnos</a></li>
         <li data-role="list-divider">Actividades del colegio</li>
-        <li><a href="/actividades">Registrar</a></li>
-        <li><a href="/calendario_actividades/<%= Date.current.strftime("%Y/%m/%d") %>">Calendario</a></li>
+        <li><a href="<%= actividades_path %>">Registrar</a></li>
+        <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>">Calendario</a></li>
         <li data-role="list-divider">Seguridad del sistema</li>
-        <li><a href="/usuarios">Usuarios</a></li>
+        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
     </ul>
   </div><!--/content-primary -->	
 </div>
