correccion en validacion de actividades

--- a/app/views/actividades/_form.html.erb
+++ b/app/views/actividades/_form.html.erb
@@ -35,6 +35,7 @@
         <%= f.label :fecha_hora_inicio, "for" => "name" %><br />
         <%= f.text_field :fecha_inicio, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px" %>
         <%= f.text_field :hora_inicio, :size => 5, :maxlength => 5, "style" => "width:60px", "data-mini" => "true" %>
+        <!--%= f.text_field :hora_inicio, "type" => "time", :size => 5, :maxlength => 5, "style" => "width:60px", "data-mini" => "true" %-->
     </div>
 
     <div class="field">
