Actualizacion de tabla autorizaciones

--- a/app/views/autorizaciones/autorizacion.html.erb
+++ b/app/views/autorizaciones/autorizacion.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
   <h1>Autorizaciones</h1>
-  <%= link_to 'Registrar', new_autorizacion_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <!--%= link_to 'Registrar', new_autorizacion_path, "data-icon" => "plus", "class" => "ui-btn-right" %-->
 </div>
 
 <div data-role="content" class="ui-content" role="main">
