Ajuste modelo Actividad y termino de vinculacion de secciones

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,22 +1,25 @@
 <div id='Actividad' data-role="header">
-  <h1>Detalles</h1>
+  <h1>Actividad</h1>
   <%= link_to 'Aceptar', actividades_path, "data-icon" => "check", "data-mini" => "true"  %>
   <%= link_to 'Editar', edit_actividad_path(@actividad), "class" => "ui-btn-right", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
 </div>
 
 <div data-role="content" style="clear: left; font-size: 12px;">    
-  <div style="clear: left; font-size: 16px; font-weight: bold"><%= @actividad.nombre %></div>
+  <div style="clear: left; font-size: 16px; font-weight: bold">
+    <%= @actividad.nombre %>
+  </div>
   <%= "#{TipoEvento.find(@actividad.tipo_evento_id).descripcion} (#{ListaValor.find_by_tabla_and_item(6, @actividad.tipo_actividad).descripcion})" %>
     <p>
     <%= @actividad.detalle %><p>
     <b>Del:</b> <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%M') %>
     <b> Al:</b> <%= @actividad.fecha_hora_fin.strftime('%d/%m/%Y %H:%M') %><p>
-    <b>Requiere autorización:</b>
+    <b>
     <% if @actividad.requiere_autorizacion == 1 %>
-     Si
+     Requiere autorización
     <% else %>
-     No
+     No requiere autorización
     <% end %>
+    </b>
     <p>
 </div>
 
@@ -27,7 +30,7 @@
   <% @actividad.actividades_secciones.each do |actividad_seccion| %>
     <% if !actividad_seccion.seccion_id.nil? %> 
     <li>
-      <%= link_to actividad_seccion.grado_seccion, [@actividad, actividad_seccion] %>
+      <%= link_to simple_format(actividad_seccion.grado_seccion), [@actividad, actividad_seccion] %>
       <%= link_to 'Eliminar vínculo', [actividad_seccion.actividad, actividad_seccion], confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
     </li>
     <% end %>
