--- a/app/views/actividades/calendario.html.erb
+++ b/app/views/actividades/calendario.html.erb
@@ -79,17 +79,15 @@
         <% actividad_count = 0 %>
       <% else %>
         <% persona_id = persona.id %>
-        <%# actividad = Actividad.por_persona_y_fecha(persona_id, fecha) %> <!-- activar cuando se implemente asignacion por seccion -->
-        <% actividad = Actividad.por_fecha_inicio(fecha) %> <!-- temporal hasta q se implemente asignacion por seccion -->
-        <% actividad_count = actividad.count %>        
+        <% actividad = Actividad.por_persona_y_fecha(persona_id, fecha) %> 
+        <% actividad_count = actividad.count("actividades.id", :distinct => true) %>        
       <% end %>
   
       <% if actividad_count > 0 %>
-        <% if actividad.count == 1 %>
+        <% if actividad_count == 1 %>
           <% url = "/actividades/#{actividad.first.id}" %>
         <% else %>
-          <%# url = "/actividades?persona=#{persona_id}&fecha=#{fecha.strftime('%d/%m/%Y')}" %> <!-- activar cuando se implemente asignacion por seccion -->
-          <% url = "/actividades?fecha=#{fecha.strftime('%d/%m/%Y')}" %> <!-- temporal hasta q se implemente asignacion por seccion -->
+          <% url = "/actividades?persona=#{persona_id}&fecha=#{fecha.strftime('%d/%m/%Y')}" %>           
         <% end %>
       <% else %>
         <% url = "/calendario_actividades/#{fecha.strftime('%Y/%m/%d')}" %>
