Boton confirmar actividad

--- a/app/views/actividades/_form.html.erb
+++ b/app/views/actividades/_form.html.erb
@@ -24,11 +24,11 @@
     </div>
     <div class="field">
         <%= f.label :nombre, "for" => "name" %><br />
-        <%= f.text_field :nombre, "data-mini" => "false" %>
+        <%= f.text_field :nombre, "data-mini" => "true" %>
     </div>
     <div class="field">
         <%= f.label :detalle, "for" => "Textarea" %><br />
-        <%= f.text_area :detalle, "data-mini" => "false" %>
+        <%= f.text_area :detalle, "data-mini" => "true" %>
     </div>
     
     <div class="field">
