--- a/app/views/autorizaciones/edit.html.erb
+++ b/app/views/autorizaciones/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing autorizacion</h1>
+<div data-role="header">
+    <h1>Responder</h1>
+    <%= link_to 'Regresar', autorizaciones_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @autorizacion %> |
-<%= link_to 'Back', autorizaciones_path %>
