--- a/app/views/autorizaciones/autorizacion.html.erb
+++ b/app/views/autorizaciones/autorizacion.html.erb
@@ -10,10 +10,11 @@
     <div data-role="collapsible" data-collapsed="false">
       <h2>Pendientes</h2>
       <ul data-role="listview" data-filter="true">
-        <% @autorizaciones.vigente.pendiente.each do |autorizacion| %>
+        <% @autorizaciones.pendiente.vigente.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
             <%= link_to edit_autorizacion_path(autorizacion) do %>
-              <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>
+              <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
+              <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
             <% end %>
             <!--%= link_to 'Eliminar', autorizacion, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %-->
           </li>
@@ -22,12 +23,14 @@
     </div>
     
     <div data-role="collapsible">
-      <h2>Respondidas</h2>
+      <h2>Atendidos</h2>
       <ul data-role="listview" data-filter="true">
-        <% @autorizaciones.vigente.respondida.each do |autorizacion| %>    
+        <% @autorizaciones.respondida.vigente.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
-            <%= link_to autorizacion do %>
-              <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %> 
+            <%= link_to edit_autorizacion_path(autorizacion) do %>
+              <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
+              <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
+              <p class="ui-li-desc"> Autorizado: <% if autorizacion.respuesta.nil? %> Sin respuesta <%else%> <%if autorizacion.respuesta ==0%> No <%else%> Si <%end%> <%end%></p>
             <% end %>
           </li>
         <% end  %>
@@ -35,12 +38,14 @@
     </div>
 
     <div data-role="collapsible">
-      <h2>Pasadas</h2>
+      <h2>Pasados</h2>
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.pasado.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
             <%= link_to autorizacion do %>
-              <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %> 
+              <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
+              <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
+              <p class="ui-li-desc"> Autorizado: <% if autorizacion.respuesta.nil? %> Sin respuesta <%else%> <%if autorizacion.respuesta ==0%> No <%else%> Si <%end%> <%end%></p>
             <% end %>
           </li>
         <% end  %>
