--- a/app/views/autorizaciones/index.html.erb
+++ b/app/views/autorizaciones/index.html.erb
@@ -26,7 +26,7 @@
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.vigente.respondida.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
-            <%= link_to autorizacion do %>
+            <%= link_to edit_autorizacion_path(autorizacion) do %>
               <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %> 
             <% end %>
           </li>
