--- a/app/views/autorizaciones/autorizacion.html.erb
+++ b/app/views/autorizaciones/autorizacion.html.erb
@@ -8,13 +8,14 @@
   <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
     
     <div data-role="collapsible" data-collapsed="false">
-      <h2>Pendientes</h2>
+    <h2>Pendientes</h2>
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.pendiente.vigente.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
             <%= link_to edit_autorizacion_path(autorizacion) do %>
               <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
               <p class="ui-li-desc"> <%= "Para: #{autorizacion.alumno.apellidos_nombres}" %></p>
+              <p class="ui-li-desc"> <%= "Plazo: #{autorizacion.actividad.limite_autorizacion.strftime('%d/%m/%Y')}" %></p>
             <% end %>
             <!--%= link_to 'Eliminar', autorizacion, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %-->
           </li>
@@ -23,7 +24,7 @@
     </div>
     
     <div data-role="collapsible">
-      <h2>Atendidos</h2>
+      <h2>Respondidos</h2>
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.respondida.vigente.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
