--- a/app/views/cuaderno_controles_revisiones/index.html.erb
+++ b/app/views/cuaderno_controles_revisiones/index.html.erb
@@ -15,22 +15,57 @@
 <div data-role="content">
   <%= form_tag(cuaderno_controles_revisiones_path, {:method => :get, "onSubmit" => "return validarBusquedaXFecha();", "data-ajax" => "false", "name" => "buscar"}) do %>
     <div data-role="fieldcontain">
-      Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %>
+      Fecha: <%= text_field_tag(:fecha, fecha, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:120px") %><br />
       Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
       <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
     </div>
   <% end %>
   
-  <ul data-role="listview" data-filter="true">
-    <div data-role="content" style="color: #06c">
-      <%= simple_format(titulo) %>
+<div data-role="collapsible-set" data-theme="c" data-content-theme="d" data-inset="false">
+    <div data-role="collapsible">
+        <h2> 
+            <% if !fecha.empty? %>
+              <span class="ui-li-count ui-btn-up-f ui-btn-corner-all"><%=@cuaderno_controles_revisiones.revisado.count%></span>
+            <%end%>
+             Revisados
+        </h2>
+        <ul data-role="listview" data-filter="true">
+        <!--div data-role="content" style="color: #06c"-->
+        <!--%= simple_format(titulo) %-->
+        <!--/div-->
+            <% @cuaderno_controles_revisiones.revisado.each do |cuaderno_control_revision| %>
+                <!--li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" <% if cuaderno_control_revision.revisado == 1 %>data-icon="check"<% else %>data-icon="false"<% end %>  -->
+                    <!--%= link_to "#" do %-->
+                        <!--%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres} -- #{cuaderno_control_revision.observaciones}") %-->
+                    <!--% end %-->
+                <!--/li-->
+                <li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" >
+                    <%= link_to "#" do %>
+                        <%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres}") %>
+                        <% if !cuaderno_control_revision.observaciones.empty? %>
+                            <%= simple_format("Observaciones del padre: #{cuaderno_control_revision.observaciones}") %>
+                        <% end %>
+                    <% end %>
+                </li>
+            <% end %>
+        </ul>
     </div>
-    <% @cuaderno_controles_revisiones.each do |cuaderno_control_revision| %>
-    <li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" <% if cuaderno_control_revision.revisado == 1 %>data-icon="check"<% else %>data-icon="false"<% end %>  >
-      <%= link_to "#" do %>
-        <%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres} -- #{cuaderno_control_revision.observaciones}") %>        
-      <% end %>      
-    </li>
-    <% end %>
-  </ul>
+    
+    <div data-role="collapsible">
+        <h2>
+            <% if !fecha.empty? %>
+                <span class="ui-li-count ui-btn-up-f ui-btn-corner-all"><%=@cuaderno_controles_revisiones.no_revisado.count%></span>
+            <%end%>
+            No Revisados
+        </h2>  
+        <ul data-role="listview" data-filter="true">
+            <% @cuaderno_controles_revisiones.no_revisado.each do |cuaderno_control_revision| %>
+                <li data-filtertext="<%= "#{cuaderno_control_revision.alumno.apellidos_nombres}" %>" >
+                    <%= link_to "#" do %>
+                        <%= simple_format("#{cuaderno_control_revision.alumno.apellidos_nombres}") %>
+                    <% end %>
+                </li>
+            <% end %>
+        </ul>
+    </div>
 </div>
