--- a/app/views/actividad_mailer/notificacion_actividad.text.erb
+++ b/app/views/actividad_mailer/notificacion_actividad.text.erb
@@ -4,7 +4,7 @@ Se le recuerda que el <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%mi
 
 <%= @actividad.nombre %>
 
-<%= @actividad.descripcion %>
+<%= @actividad.detalle %>
 
 <%# if @actividad.requiere_autorizacion == 1 and @actividad.autorizada(alumno) == 0 %>
 <% if @actividad.requiere_autorizacion == 1 %>
