--- a/app/views/actividad_mailer/notificacion_actividad.html.erb
+++ b/app/views/actividad_mailer/notificacion_actividad.html.erb
@@ -1,5 +1,6 @@
 <p>Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:</p>
-<p>Se le recuerda que el <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%mi') %> se llevará a cabo la siguiente actividad:</p>
+<p>Se le recuerda que el <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%mi') %> se llevará a cabo la siguiente actividad, 
+en la que participará la sección de su hijo(a) <%= @alumno.apellidos_nombres %>:</p>
 
 <p>
   <b><%= @actividad.nombre %></b>
