--- a/app/views/actividad_mailer/notificacion_actividad.html.erb
+++ b/app/views/actividad_mailer/notificacion_actividad.html.erb
@@ -1,5 +1,5 @@
 <p>Estimado(a) señor(a) <%= @persona.apellidos_nombres %>:</p>
-<p>Se le recuerda que el <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%mi') %> se llevará a cabo la siguiente actividad, 
+<p>Se le recuerda que el <%= @actividad.fecha_hora_inicio.strftime('%d/%m/%Y %H:%M') %> se llevará a cabo la siguiente actividad, 
 en la que participará la sección de su hijo(a) <%= @alumno.apellidos_nombres %>:</p>
 
 <p>
@@ -9,8 +9,7 @@ en la que participará la sección de su hijo(a) <%= @alumno.apellidos_nombres %
 </p>
 
 <p>
-  <%# if @actividad.requiere_autorizacion == 1 and @actividad.autorizada(alumno) == 0 %>
-  <% if @actividad.requiere_autorizacion == 1 %>
+  <% if @actividad.requiere_autorizacion == 1 and @actividad.autorizaciones.find_by_alumno_id(@alumno.id).respuesta.nil? %>
     Además, se le recuerda que debe indicar si autoriza la participación de su hijo, para lo cual tiene plazo hasta el 
     <%= @actividad.limite_autorizacion.strftime('%d/%m/%Y %H:%M') %>.
   <% end %>
